--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,31 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Manrope:wght@200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rufina:wght@400;700&display=swap');
+:root {
+  --font-family: "Poppins", sans-serif;
+  --second-family: "Inter", sans-serif;
+  --third-family: "Roboto", sans-serif;
+  --font3: "Manrope", sans-serif;
+  --font4: "Rufina", sans-serif;
+  --primary-color:#3a3a3a;
+}
+.primary-color{
+    color: var(--primary-color);
+}
+.font-inter{
+    font-family: var(--second-family);
+}
+.font-poppins{
+    font-family: var(--font-family);
+}
+.font-roboto{
+    font-family: var(--third-family);
+}
+.font-manrope{
+    font-family: var(--font3);
+}
+.font-rufina{
+    font-family: var(--font4);
+}
+/* .container{
+    width: 1224px;
+    margin: 0 auto;
+} */
